Fixed up Gayle's name

--- a/CalumAndGale/Views/CalumGayle/Index.cshtml
+++ b/CalumAndGale/Views/CalumGayle/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model CalumGaleWeb.Models.Rsvp
+﻿@model CalumGayleWeb.Models.Rsvp
 @{
     ViewBag.Title = "RSVP";
 }
 
 <div class="background">
-    @using (Html.BeginForm("Submitted", "CalumGale"))
+    @using (Html.BeginForm("Submitted", "CalumGayle"))
     {
         <div>
             <div class="lable">
