--- a/CalumAndGale/Content/Site.css
+++ b/CalumAndGale/Content/Site.css
@@ -58,7 +58,7 @@ textarea {
 .validation-summary-valid {
     display: none;
 }
-/* Styles Calum and Gale
+/* Styles Calum and Gayle
 -----------------------------------------------------------*/
 html { 
 	background-color: #ECDDC6;
@@ -66,7 +66,7 @@ html {
 
 .background
 {
-	background: url(CalumandGale.jpe); 
+	background: url(CalumGayle.jpe); 
 	height: 700px;
 	width: 700px;
 	margin:0 auto;
