--- a/CalumAndGale/Views/CalumGayle/Index.cshtml
+++ b/CalumAndGale/Views/CalumGayle/Index.cshtml
@@ -3,17 +3,11 @@
     ViewBag.Title = "RSVP";
 }
 
-<div class="background">
-    @using (Html.BeginForm("Submitted", "CalumGayle"))
-    {
-        <div>
-            <div class="lable">
-                Names: 
-    @using (Html.BeginForm("Submitted", "CalumGayle"))
-{
-        <div>
-            <div class="lable">
-                Names: 
+<nav class="center">
+    @Html.Partial("Navigation")
+</nav>
+<div class="background center"> 
+     
     <div class="form">
         @using (Html.BeginForm("Submitted", "CalumGayle"))
         {
@@ -48,377 +42,8 @@
             <div>
                 @Html.EditorFor(rsvp => rsvp.NotGoing) Respectfully decline.
             </div>
-        </div>
-        <div>
-            @Html.EditorFor(rsvp => rsvp.Ireland) Attending the Irish Wedding.
-        </div>
-        <div>
-            @Html.EditorFor(rsvp => rsvp.Australia) Attending the Australian Wedding.
-        </div>
-        <div>
-            @Html.EditorFor(rsvp => rsvp.NotGoing) Respectfully decline.
-        </div>
-        <input type="submit" value="RSVP">     
-    }
-        </div>
-        <div>
-            @Html.EditorFor(rsvp => rsvp.Ireland) Attending the Irish Wedding.
-        </div>
-        <div>
-            @Html.EditorFor(rsvp => rsvp.Australia) Attending the Australian Wedding.
-        </div>
-        <div>
-            @Html.EditorFor(rsvp => rsvp.NotGoing) Respectfully decline.
-        </div>
-    <input type="submit" value="RSVP">     
-    }
+        
             <input type="submit" value="RSVP">     
         }
     </div>
 </div>
-<div>
-    <table>
-        <tr>
-            <th colspan="4">
-                Hotels In Sligo & The Sligo Area (International Tel: +353-71)    
-            </th>
-        </tr>
-        <tr>
-            <th>
-                Hotel
-            </th>
-            <th>
-                Telephone
-            </th>
-            <th>
-                Fax
-            </th>
-            <th>
-                Location
-            </th>
-        </tr>
-        <tr>
-            <td>
-                Sligo Park
-            </td>
-            <td>
-                91 30291
-            </td>
-            <td>
-                91 69556
-            </td>
-            <td>
-                Pearse Rd.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                The Great Southern
-            </td>
-            <td>
-                91 62101
-            </td>
-            <td>
-                91 48060
-            </td>
-            <td>
-                Strandhill Rd.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Cromleach Lodge
-            </td>
-            <td>
-                91 65155
-            </td>
-            <td>
-                91 65455
-            </td>
-            <td>
-                Castlebaldwin
-            </td>
-        </tr>
-        <tr>
-            <td>
-                The Coach House
-            </td>
-            <td>
-                91 83111
-            </td>
-            <td>
-                91 83172
-            </td>
-            <td>
-                Ballymote
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Yeats Country Hotel
-            </td>
-            <td>
-                91 77211
-            </td>
-            <td>
-                91 77211
-            </td>
-            <td>
-                Rosses Point
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Radisson SAS
-            </td>
-            <td>
-                91 40008
-            </td>
-            <td/>
-            <td>
-                Ballincar
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Abbey Manor Hotel
-            </td>
-            <td>
-                91 64202
-            </td>
-            <td/>
-            <td>
-                Dromaheir
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Castle Dargan
-            </td>
-            <td>
-                91 18080
-            </td>
-            <td/>
-            <td>
-                Ballygawley
-            </td>
-        </tr>
-        <tr>
-            <td>
-                The Clarion
-            </td>
-            <td>
-                91 19000
-            </td>
-            <td/>
-            <td>
-                Clarion Rd.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                The Glass House
-            </td>
-            <td>
-                91 94300
-            </td>
-            <td/>
-            <td>
-                Sligo Town
-            </td>
-        </tr>
-    </table>
-    
-    <table>
-        <tr>
-            <th colspan="3">
-                B&B’s In The Local Area
-            </th>
-        </tr>
-        <tr>
-            <th>
-                B&B
-            </th>
-            <th>
-                Telephone
-            </th>
-            <th>
-                Location
-            </th>
-        </tr>
-        <tr>
-            <td>
-                Home Farm Apartments
-            </td>
-            <td>
-                Phone Castle Reception
-            </td>
-            <td>
-                On Castle Grounds
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Denise Mullen/Beaches
-            </td>
-            <td>
-                91 67178
-            </td>
-            <td>
-                Collooney
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Chestnut Lodge
-            </td>
-            <td>
-                91 67330
-            </td>
-            <td>
-                Collooney
-            </td>
-        </tr>
-        <tr>
-            <td>
-                The Rowans
-            </td>
-            <td>
-                91 67337
-            </td>
-            <td>
-                Ballisodare
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Justin Gilmartin
-            </td>
-            <td>
-                91 30271
-            </td>
-            <td>
-                Collooney
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Temple House
-            </td>
-            <td>
-                91 83329
-            </td>
-            <td>
-                Collooney
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Hill View Lodge
-            </td>
-            <td>
-                91 65429
-            </td>
-            <td>
-                Collooney
-            </td>
-        </tr>
-        <tr>
-            <td>
-                O’ Gradys
-            </td>
-            <td>
-                91 67211
-            </td>
-            <td>
-                Coolaney
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Kingsfort Country House
-            </td>
-            <td>
-                91 15111
-            </td>
-            <td>
-                Ballintogher
-            </td>
-        </tr>
-    </table>
-    
-    <table>
-        <tr>
-            <th colspan="3">
-                B&B’s In The Sligo Area
-            </th>
-        </tr>
-        <tr>
-            <th>
-                B&B
-            </th>
-            <th>
-                Telephone
-            </th>
-            <th>
-                Location
-            </th>
-        </tr>
-        <tr>
-            <td>
-                Innisfree
-            </td>
-            <td>
-                91 62480
-            </td>
-            <td>
-                Pearse Rd.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Park House
-            </td>
-            <td>
-                91 70333
-            </td>
-            <td>
-                Pearse  Rd.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Pearse	Lodge
-            </td>
-            <td>
-                91 61090
-            </td>
-            <td>
-                Pearse Rd.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Tree Tops
-            </td>
-            <td>
-                91 60160
-            </td>
-            <td>
-                Cleaveragh Rd.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Stradbrook B&B
-            </td>
-            <td>
-                91 69674
-            </td>
-            <td>
-                Pearse Rd.
-            </td>
-        </tr>
-    </table>
-</div>  
-
